--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ flowpipe = "^0.10.0"
 celery = { extras = ["redis"], version = "^5.2.7" }
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.3"
+pytest-cov = "^3.0.0"
+pytest-celery = "^0.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
