--- a/example/app/Dockerfile
+++ b/example/app/Dockerfile
@@ -5,10 +5,12 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-COPY boot.sh ./
-RUN chmod +x boot.sh
+COPY boot.sh ./boot.sh
+RUN chmod +x ./boot.sh
 
 # Lazy way to add the test `nodes` and the `flowpipe_celery_adapter` to the path
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 
-CMD ["./boot.sh"]
+CMD ["sh", "./boot.sh"]
+
+
